Use smaller image for soshio modal

--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
                             <!-- Project Details Go Here -->
                             <h2>Soshio</h2>
                             <p class="item-intro text-muted">Social analytics for Chinese language and market</p>
-                            <img class="img-responsive img-centered" src="img/soshio.png" alt="">
+                            <img class="img-responsive img-centered" src="img/soshio.jpg" alt="">
                             <ul class="list-inline">
                                 <li>2012-2013</li>
                                 <li>Founder, CTO</li>
