--- a/index.html
+++ b/index.html
@@ -372,14 +372,14 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading heading-inverted">Arts</h2>
-                    <h3 class="section-subheading heading-inverted">I am also an illustrator, publishing as <a href="https://www.instagram.com/chicgeekillustrated/">Chic Geek Illustrated</a></h3>
+                    <h3 class="section-subheading heading-inverted">I am also an illustrator, publishing as <a href="https://www.instagram.com/baconillustrated/">Bacon Illustrated</a></h3>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
                     <!-- SnapWidget -->
                     <script src="https://snapwidget.com/js/snapwidget.js"></script>
-                    <iframe src="https://snapwidget.com/embed/code/189923" class="snapwidget-widget" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:100%; "></iframe>
+                    <iframe src="https://snapwidget.com/embed/code/201102" class="snapwidget-widget" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:100%; "></iframe>
                 </div>
             </div>
         </div>
