Fix decisive photo

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/soshio.jpg" class="img-responsive" alt="">
+                        <img src="img/decisive.jpg" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Decisive</h4>
