Fix decisive tag

--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
                         <div class="modal-body">
                             <!-- Project Details Go Here -->
                             <h2>Soshio</h2>
-                            <p class="item-intro text-muted">Social analytics for multimedia contents</p>
+                            <p class="item-intro text-muted">Predictive analytics for social marketing content</p>
                             <img class="img-responsive img-centered" src="img/decisive.jpg" alt="">
                             <ul class="list-inline">
                                 <li>2014-2015</li>
