Fix instagram link

--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
                     <a class="btn btn-lg" href="https://github.com/whosken/" title="Github"><i class="fa fa-github fa-2x"></i></a>
                     <a class="btn btn-lg" href="https://www.linkedin.com/in/kenhu" title="LinkedIn"><i class="fa fa-linkedin fa-2x"></i></a>
                     <a class="btn btn-lg" href="https://medium.com/@whosbacon" title="Medium"><i class="fa fa-medium fa-2x"></i></a>
-                    <a class="btn btn-lg" href="https://www.instagram.com/chicgeekillustrated/" title="Instagram"><i class="fa fa-instagram fa-2x"></i></a>
+                    <a class="btn btn-lg" href="https://www.instagram.com/baconillustrated/" title="Instagram"><i class="fa fa-instagram fa-2x"></i></a>
                     <a class="btn btn-lg" href="https://angel.co/kenhu" title="AngelList"><i class="fa fa-angellist fa-2x"></i></a>
                     <a class="btn btn-lg" href="http://vagabond.whosbacon.com" title="Travel"><i class="fa fa-globe fa-2x"></i></a>
                     <a class="btn btn-lg" href="mailto:whosbacon@gmail.com" title="Email"><i class="fa fa-envelope fa-2x"></i></a>
