--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Keep searching; in</div>
-                <div class="intro-heading">data, tech, arts, startup,</div>
-                <div class="intro-lead-in">world, love, and life.</div>
+                <div class="intro-lead-in">Sometimes I travel</div>
+                <div class="intro-lead-in">Sometimes I draw</div>
+                <div class="intro-heading">Most times I code</div>
             </div>
         </div>
     </header>
