--- a/index.html
+++ b/index.html
@@ -94,9 +94,8 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Sometimes I travel</div>
-                <div class="intro-lead-in">Sometimes I draw</div>
-                <div class="intro-heading">Most times I code</div>
+                <div class="intro-lead-in">Sometimes I travel; sometimes I draw; most times I code</div>
+                <div class="intro-heading">Python + data engineering</div>
             </div>
         </div>
     </header>
