--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Keep searching; in data, tech, arts, startups, world, love, and life.">
+    <meta name="description" content="Sometimes I travel; sometimes I draw; most times I code">
     <meta name="author" content="Ken Hu">
 
     <title>whosbacon: Ken Hu</title>
@@ -95,7 +95,8 @@
         <div class="container">
             <div class="intro-text">
                 <div class="intro-lead-in">Sometimes I travel; sometimes I draw; most times I code</div>
-                <div class="intro-heading">Python + data engineering</div>
+                <div class="intro-heading">Python developer</div>
+                <div class="intro-heading">Data engineer</div>
             </div>
         </div>
     </header>
