--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Sometimes I travel; sometimes I draw; most times I code</div>
+                <div class="intro-lead-in">Sometimes I travel; sometimes I draw</div>
+                <div class="intro-lead-in">Most times, I code</div>
                 <div class="intro-heading">Python developer</div>
                 <div class="intro-heading">Data engineer</div>
             </div>
@@ -113,7 +114,7 @@
                     <div class="team-member">
                         <img src="img/profile.jpg" class="img-responsive img-circle" alt="">
                         <h4>Ken Hu</h4>
-                        <p class="text-muted">Python Developer</p>
+                        <p class="text-muted">Python developer</p>
                         <ul class="list-inline social-buttons">
                             <li><a href="https://twitter.com/whosbacon"><i class="fa fa-twitter"></i></a></li>
                             <li><a href="https://github.com/whosken/"><i class="fa fa-github"></i></a></li>
