--- a/index.html
+++ b/index.html
@@ -447,9 +447,8 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
                             <!-- Project Details Go Here -->
-                            <h2>Soshio</h2>
+                            <h2>Decisive</h2>
                             <p class="item-intro text-muted">Predictive analytics for social marketing content</p>
-                            <img class="img-responsive img-centered" src="img/decisive.jpg" alt="">
                             <ul class="list-inline">
                                 <li>2014-2015</li>
                                 <li>Data Engineer</li>
@@ -481,7 +480,6 @@
                             <!-- Project Details Go Here -->
                             <h2>Soshio</h2>
                             <p class="item-intro text-muted">Social analytics for Chinese language and market</p>
-                            <img class="img-responsive img-centered" src="img/soshio.jpg" alt="">
                             <ul class="list-inline">
                                 <li>2012-2013</li>
                                 <li>Founder, CTO</li>
