--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
                     <div class="team-member">
                         <img src="img/profile.jpg" class="img-responsive img-circle" alt="">
                         <h4>Ken Hu</h4>
+                        <p class="text-muted"></p>
                         <ul class="list-inline social-buttons">
                             <li><a href="https://twitter.com/whosbacon"><i class="fa fa-twitter"></i></a></li>
                             <li><a href="https://github.com/whosken/"><i class="fa fa-github"></i></a></li>
@@ -456,7 +457,7 @@
                             <p>I was part of a fantastic startup, working directly with founders David Dundas and Ryan Witt. During my time there, we went through a product pivot, from a self-serve mobile advertising plateform to a social content analytics product. These presented different challenges and allowed me to grow both in breadth and depth.</p>
                             <p>For the advertising platform, I developed a data pipeline to consume more than 500M events daily. It processed in nearly realtime, with less 1 hour from ingestion to the RESTful API. The endpoints were further designed for efficient reporting and data analysis.</p>
                             <p>During the pivot to social analytics, I delivered an analytics dashboard MVP within two weeks. The MVP includes an extract-transform-load pipeline for numerous social platforms. The collected social contents were profiled into various parameters for the data science team to model.</p>
- collected                            <p>
+                            <p></p>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
@@ -489,7 +490,7 @@
                             <p>I developed the core text mining engine to extract sentiment and emotions from text. Working with a language very different from English presented challenges not covered by the popular tools. I was able to explore new techniques for this problem.</p>
                             <p>The task was further complicated by the data size which was required to ingest. At nearly 1M weekly, there are a lot of data to acquire and process through the language engine. I achieved this by leveraging crawler queues and analytics workers.</p>
                             <p>To effectively communicate the results, I used visualization tools, from basic trend plot to more complex heat maps. Users are able to drill into the analytics to compare results across social keywords. With responsive design, users can also access it on devices of all sizes.</p>
-                            <p>
+                            <p></p>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
