Add slide deck and media contents

--- a/index.html
+++ b/index.html
@@ -132,6 +132,9 @@
                     <p class="text-muted">For my previous startup, I've built a social analytics product with a bespoke NLP engine to analyze the Chinese social media. It would collect the social conversations surround a keyword and determine the prevailing emotions.</p>
                 </div>
             </div>
+            <div class="row">
+                <script async class="speakerdeck-embed" data-id="94cf7567efcf4cf08ea3f92891193f8c" data-ratio="1.33333333333333" src="//speakerdeck.com/assets/embed.js"></script>
+            </div>
         </div>
     </section>
 
@@ -491,6 +494,7 @@
                             <p>The task was further complicated by the data size which was required to ingest. At nearly 1M weekly, there are a lot of data to acquire and process through the language engine. I achieved this by leveraging crawler queues and analytics workers.</p>
                             <p>To effectively communicate the results, I used visualization tools, from basic trend plot to more complex heat maps. Users are able to drill into the analytics to compare results across social keywords. With responsive design, users can also access it on devices of all sizes.</p>
                             <p></p>
+                            <p><iframe src="https://player.vimeo.com/video/53933443" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></p>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
