Update role change

--- a/index.html
+++ b/index.html
@@ -94,10 +94,9 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Sometimes I travel; sometimes I draw</div>
+                <div class="intro-lead-in">Sometimes I travel; sometimes I draw; sometimes I write</div>
                 <div class="intro-lead-in">Most times, I code</div>
-                <div class="intro-heading">Python developer</div>
-                <div class="intro-heading">Data engineer</div>
+                <div class="intro-heading">Data + ML Engineer</div>
             </div>
         </div>
     </header>
@@ -126,7 +125,7 @@
             </div>
             <div class="row">
                 <div class="col-md-4 col-md-offset-2">
-                    <p class="text-muted">I am a Python developer and data engineer. My professional experiences ranges across data pipelines, microservices, search engines, natural language processing, business intelligence products, and machine learning.</p>
+                    <p class="text-muted">I'm a data + machine learning engineer. My professional experiences range across data pipelines, microservices, search engines, natural language processing, data analytics, and artificial intelligence. My weapon of choice is Python.</p>
                 </div>
                 <div class="col-md-4">
                     <p class="text-muted">For my previous startup, I've built a social analytics product with a bespoke NLP engine to analyze the Chinese social media. It would collect the social conversations surround a keyword and determine the prevailing emotions.</p>
