--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h4>Self Employed</h4>
-                                    <h4 class="subheading">Python Developer</h4>
+                                    <h4 class="subheading">Data Engineer</h4>
                                 </div>
                                 <div class="timeline-body">
                                     <ul class="text-muted">
