--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Sometimes I travel; sometimes I draw; most times I code">
+    <meta name="description" content="Sometimes I travel; sometimes I draw; sometimes I write; most times I code">
     <meta name="author" content="Ken Hu">
 
     <title>whosbacon: Ken Hu</title>
@@ -95,8 +95,8 @@
         <div class="container">
             <div class="intro-text">
                 <div class="intro-lead-in">Sometimes I travel; sometimes I draw; sometimes I write</div>
-                <div class="intro-lead-in">Most times, I code</div>
-                <div class="intro-heading">Data + ML Engineer</div>
+                <div class="intro-lead-in">Most times I code</div>
+                <div class="intro-heading">Data + Machine Learning Engineer</div>
             </div>
         </div>
     </header>
@@ -210,7 +210,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Experiences</h2>
-                    <h3 class="section-subheading text-muted"><a href="https://www.linkedin.com/profile/pdf?id=AAEAAAJPvSUBbVJFUnJ2If9aBLBPIR1kpyAUvic&pdfFileName=KenHu&disablePdfCompression=true&trk=pdf_pro_full" title="résumé">Download</a> as PDF</h3>
+                    <h3 class="section-subheading text-muted">Download <a href="https://www.linkedin.com/profile/pdf?id=AAEAAAJPvSUBbVJFUnJ2If9aBLBPIR1kpyAUvic&pdfFileName=KenHuCV&disablePdfCompression=true&trk=pdf_pro_full" title="résumé">CV</a> as PDF</h3>
                 </div>
             </div>
             <div class="row">
