--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Sometimes I travel; sometimes I draw; sometimes I write; most times I code">
     <meta name="author" content="Ken Hu">
 
-    <title>whosbacon: Ken Hu</title>
+    <title>Ken Hu: Data + ML Engineer</title>
     
     <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -96,7 +96,7 @@
             <div class="intro-text">
                 <div class="intro-lead-in">Sometimes I travel; sometimes I draw; sometimes I write</div>
                 <div class="intro-lead-in">Most times I code</div>
-                <div class="intro-heading">Data + Machine Learning Engineer</div>
+                <div class="intro-heading">Data + ML Engineer</div>
             </div>
         </div>
     </header>
