--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Experiences</h2>
-                    <h3 class="section-subheading text-muted">Download <a href="https://www.linkedin.com/profile/pdf?id=AAEAAAJPvSUBbVJFUnJ2If9aBLBPIR1kpyAUvic&pdfFileName=KenHuCV&disablePdfCompression=true&trk=pdf_pro_full" title="résumé">CV</a> as PDF</h3>
+                    <h3 class="section-subheading text-muted">A printer-friendly <a href="/cv" title="résumé">CV</a></h3>
                 </div>
             </div>
             <div class="row">
