--- a/cv.html
+++ b/cv.html
@@ -1,1 +1,1 @@
-<script src="https://gist.github.com/whosken/7651661.js"></script>
+<script src="https://gist.github.com/whosken/84eaa3e0c5926d3e2bfce38f8cd99f38.js"></script>
