Update social links and outro

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
                 <ul class="nav navbar-nav">
                     <li><a title="Twitter" href="https://twitter.com/whosbacon"><i class="fa fa-twitter"></i></a></li>
                     <li><a title="Github" href="https://github.com/whosken/"><i class="fa fa-github"></i></a></li>
-                    <li><a title="LinkedIn" href="https://www.linkedin.com/in/kenhu"><i class="fa fa-linkedin"></i></a></li>
                     <li><a title="Blog" href="https://medium.com/@whosbacon"><i class="fa fa-medium"></i></a></li>
+                    <li><a title="Instagram" href="https://www.instagram.com/baconillustrated/"><i class="fa fa-instagram"></i></a></li>
                     <li><a title="CV" href="cv"><i class="fa fa-file-text"></i></a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
@@ -117,8 +117,8 @@
                         <ul class="list-inline social-buttons">
                             <li><a href="https://twitter.com/whosbacon"><i class="fa fa-twitter"></i></a></li>
                             <li><a href="https://github.com/whosken/"><i class="fa fa-github"></i></a></li>
-                            <li><a href="https://www.linkedin.com/in/kenhu"><i class="fa fa-linkedin"></i></a></li>
                             <li><a href="https://medium.com/@whosbacon"><i class="fa fa-medium"></i></a></li>
+                            <li><a href="https://www.instagram.com/baconillustrated/"><i class="fa fa-instagram"></i></a></li>
                         </ul>
                     </div>
                 </div>
@@ -392,11 +392,8 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a class="btn btn-lg" href="https://twitter.com/whosbacon" title="Twitter"><i class="fa fa-twitter fa-2x"></i></a>
                     <a class="btn btn-lg" href="https://github.com/whosken/" title="Github"><i class="fa fa-github fa-2x"></i></a>
-                    <a class="btn btn-lg" href="https://www.linkedin.com/in/kenhu" title="LinkedIn"><i class="fa fa-linkedin fa-2x"></i></a>
                     <a class="btn btn-lg" href="https://medium.com/@whosbacon" title="Medium"><i class="fa fa-medium fa-2x"></i></a>
                     <a class="btn btn-lg" href="https://www.instagram.com/baconillustrated/" title="Instagram"><i class="fa fa-instagram fa-2x"></i></a>
-                    <a class="btn btn-lg" href="https://angel.co/kenhu" title="AngelList"><i class="fa fa-angellist fa-2x"></i></a>
-                    <a class="btn btn-lg" href="http://vagabond.whosbacon.com" title="Travel"><i class="fa fa-globe fa-2x"></i></a>
                     <a class="btn btn-lg" href="mailto:whosbacon@gmail.com" title="Email"><i class="fa fa-envelope fa-2x"></i></a>
                 </div>
             </div>
@@ -414,8 +411,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center outro-body">
-                    <p>I am available for contract or collaboration. Please don't hesitate to reach out to me if you have any questions, comments, or requests!</p>
-                    <p><a class="btn btn-primary" href="mailto:whosbacon@gmail.com" target="_blank">whosbacon@gmail.com</a></p>
+                    <p>I am available for contract or collaboration. Please don't hesitate to <a href="mailto:whosbacon@gmail.com" target="_blank">contact</a> me if you have any questions, comments, or requests!</p>
                 </div>
             </div>
         </div>
@@ -425,7 +421,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <span class="copyright">Made with <i class="fa fa-heart"></i> by <a href="#page-top" class="page-scroll">Ken Hu</a>. Copyright © 2016. All Rights Reserved</span>
+                    <span class="copyright">Made with <i class="fa fa-heart"></i> by <a href="#page-top" class="page-scroll">Ken Hu</a>. Copyright © 2017. All Rights Reserved</span>
                 </div>
             </div>
         </div>
