--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Experiences</h2>
-                    <h3 class="section-subheading text-muted">A printer-friendly <a href="/cv" title="résumé">CV</a></h3>
+                    <h3 class="section-subheading text-muted">A printer-friendly <a href="/cv" title="résumé" target="_blank">CV</a></h3>
                 </div>
             </div>
             <div class="row">
@@ -261,7 +261,7 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>Applied AI</h4>
+                                    <h4><a href="http://applied.ai/" target="_blank">Applied AI</a></h4>
                                     <h4 class="subheading">Data Scientist</h4>
                                 </div>
                                 <div class="timeline-body">
@@ -301,7 +301,7 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>Skyscanner</h4>
+                                    <h4><a href="https://www.skyscanner.net/" target="_blank">Skyscanner</a></h4>
                                     <h4 class="subheading">Developer</h4>
                                 </div>
                                 <div class="timeline-body">
@@ -337,7 +337,7 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>Hewlett Packard</h4>
+                                    <h4><a href="http://www8.hp.com/us/en/software-solutions/webinspect-dynamic-analysis-dast/" target="_blank">Hewlett Packard</a></h4>
                                     <h4 class="subheading">Software Engineer</h4>
                                 </div>
                                 <div class="timeline-body">
@@ -411,7 +411,8 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center outro-body">
-                    <p>I am available for contract or collaboration. Please don't hesitate to <a href="mailto:whosbacon@gmail.com" target="_blank">contact</a> me if you have any questions, comments, or requests!</p>
+                    <p>I am available for contract or collaboration. Please don't hesitate to reach out if you have any questions, comments, or requests!</p>
+                    <p><a class="btn btn-primary" href="mailto:whosbacon@gmail.com" target="_blank"><i class="fa fa-envelope fa-2x"></a></p>
                 </div>
             </div>
         </div>
