--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center outro-body">
                     <p>I am available for contract or collaboration. Please don't hesitate to reach out if you have any questions, comments, or requests!</p>
-                    <p><a class="btn btn-primary" href="mailto:whosbacon@gmail.com" target="_blank"><i class="fa fa-envelope fa-2x"></a></p>
+                    <p><a class="btn btn-primary" href="mailto:whosbacon@gmail.com" target="_blank"><i class="fa fa-envelope fa-2x"></i></a></p>
                 </div>
             </div>
         </div>
