highlight data science experiences

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Sometimes I travel; sometimes I draw; sometimes I write; most times I code">
     <meta name="author" content="Ken Hu">
 
-    <title>Ken Hu: Data + ML Engineer</title>
+    <title>Ken Hu: Data Scientist / Engineer</title>
     
     <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -96,7 +96,7 @@
             <div class="intro-text">
                 <div class="intro-lead-in">Sometimes I travel; sometimes I draw; sometimes I write</div>
                 <div class="intro-lead-in">Most times I code</div>
-                <div class="intro-heading">Data + ML Engineer</div>
+                <div class="intro-heading">Data Scientist / Engineer</div>
             </div>
         </div>
     </header>
@@ -125,7 +125,7 @@
             </div>
             <div class="row">
                 <div class="col-md-4 col-md-offset-2">
-                    <p class="text-muted">I'm a data + machine learning engineer. My professional experiences range across data engineering, microservices, search engines, natural language processing, and artificial intelligence. My weapon of choice is Python.</p>
+                    <p class="text-muted">I'm a data engineer turned data scientist. My professional experiences range across data engineering, microservices, search engines, natural language processing, and artificial intelligence. My weapon of choice is Python.</p>
                 </div>
                 <div class="col-md-4">
                     <p class="text-muted">For my previous startup, I've built a social analytics product with a bespoke NLP engine to analyze the Chinese social media. It would collect the social conversations surround a keyword and determine the prevailing emotions.</p>
@@ -223,12 +223,14 @@
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h4>Self Employed</h4>
-                                    <h4 class="subheading">Data Engineer</h4>
+                                    <h4 class="subheading">Data Scientist / Engineer</h4>
                                 </div>
                                 <div class="timeline-body">
                                     <ul class="text-muted">
+                                        <li>Designed and built natural language pipeline to process articles in real time</li>
+                                        <li>Designed deep learning models to understand written text through Keras on Tensorflow, Scikit-learn, and SpaCy</li>
                                         <li>Created analytics dashboard for platform user activities with Django, Elasticsearch, and D3.js</li>
-                                        <li>Developed microservice with predictive data model using Flask, Numpy, and Scikit-learn</li>
+                                        <li>Developed microservice with predictive data model using Flask and Scikit-learn</li>
                                         <li>Developed backend RESTful API for dating application with scalable matching algorithm using Python and MongoDB</li>
                                     </ul>
                                 </div>
