highlight contractor aspect

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>Self Employed</h4>
+                                    <h4>Self-employed Contractor</h4>
                                     <h4 class="subheading">Data Scientist / Engineer</h4>
                                 </div>
                                 <div class="timeline-body">
