--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             </div>
             <div class="row">
                 <div class="col-md-4 col-md-offset-2">
-                    <p class="text-muted">I'm a data engineer turned data scientist. My professional experiences range across data engineering, microservices, search engines, natural language processing, and artificial intelligence. My weapon of choice is Python.</p>
+                    <p class="text-muted">I'm a data engineer-turned-scientist. My professional experiences range across data engineering, microservices, search engines, natural language processing, and artificial intelligence. My weapon of choice is Python.</p>
                 </div>
                 <div class="col-md-4">
                     <p class="text-muted">For my previous startup, I've built a social analytics product with a bespoke NLP engine to analyze the Chinese social media. It would collect the social conversations surround a keyword and determine the prevailing emotions.</p>
