--- a/index.html
+++ b/index.html
@@ -227,8 +227,8 @@
                                 </div>
                                 <div class="timeline-body">
                                     <ul class="text-muted">
-                                        <li>Designed and built natural language pipeline to process articles in real time</li>
-                                        <li>Designed deep learning models to understand written text through Keras on Tensorflow, Scikit-learn, and SpaCy</li>
+                                        <li>Designed and developed data pipeline to process news articles in real time</li>
+                                        <li>Designed deep learning models through Keras on Tensorflow, Scikit-learn, and SpaCy</li>
                                         <li>Created analytics dashboard for platform user activities with Django, Elasticsearch, and D3.js</li>
                                         <li>Developed microservice with predictive data model using Flask and Scikit-learn</li>
                                         <li>Developed backend RESTful API for dating application with scalable matching algorithm using Python and MongoDB</li>
