--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                     <ul class="timeline">
                         <li class="timeline">
                             <div class="timeline-image">
-                                <h4><br />2016-</h4>
+                                <h4><br />2016-2018</h4>
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -413,7 +413,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center outro-body">
-                    <p>I am available for contract or collaboration. Please don't hesitate to reach out if you have any questions, comments, or requests!</p>
+                    <p>I am currently available for part-time, short-term contract. Please don't hesitate to reach out if you have any enquiries!</p>
                     <p><a class="btn btn-primary" href="mailto:whosbacon@gmail.com" target="_blank"><i class="fa fa-envelope fa-2x"></i></a></p>
                 </div>
             </div>
