Updated leadership responsibility

--- a/index.html
+++ b/index.html
@@ -227,6 +227,7 @@
                                 </div>
                                 <div class="timeline-body">
                                     <ul class="text-muted">
+                                        <li>Lead team of four data scientists and engineers</li>
                                         <li>Designed and developed data pipeline to process news articles in real time</li>
                                         <li>Designed deep learning models through Keras on Tensorflow, Scikit-learn, and SpaCy</li>
                                         <li>Created analytics dashboard for platform user activities with Django, Elasticsearch, and D3.js</li>
