--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center outro-body">
-                    <p>I am currently available for 6 to 12-months contract. Please don't hesitate to reach out if you have any enquiries!</p>
+                    <p>Please don't hesitate to reach out if you have any enquiries!</p>
                     <p><a class="btn btn-primary" href="mailto:whosbacon@gmail.com" target="_blank"><i class="fa fa-envelope fa-2x"></i></a></p>
                 </div>
             </div>
@@ -425,7 +425,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <span class="copyright">Made with <i class="fa fa-heart"></i> by <a href="#page-top" class="page-scroll">Ken Hu</a>. Copyright © 2017. All Rights Reserved</span>
+                    <span class="copyright">Made with <i class="fa fa-heart"></i> by <a href="#page-top" class="page-scroll">Ken Hu</a>. Copyright © 2018. All Rights Reserved</span>
                 </div>
             </div>
         </div>
