--- a/index.html
+++ b/index.html
@@ -61,7 +61,6 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li><a title="Twitter" href="https://twitter.com/whosbacon"><i class="fa fa-twitter"></i></a></li>
                     <li><a title="Github" href="https://github.com/whosken/"><i class="fa fa-github"></i></a></li>
                     <li><a title="Blog" href="https://medium.com/@whosbacon"><i class="fa fa-medium"></i></a></li>
                     <li><a title="Instagram" href="https://www.instagram.com/baconillustrated/"><i class="fa fa-instagram"></i></a></li>
@@ -115,7 +114,6 @@
                         <h4>Ken Hu</h4>
                         <p class="text-muted"></p>
                         <ul class="list-inline social-buttons">
-                            <li><a href="https://twitter.com/whosbacon"><i class="fa fa-twitter"></i></a></li>
                             <li><a href="https://github.com/whosken/"><i class="fa fa-github"></i></a></li>
                             <li><a href="https://medium.com/@whosbacon"><i class="fa fa-medium"></i></a></li>
                             <li><a href="https://www.instagram.com/baconillustrated/"><i class="fa fa-instagram"></i></a></li>
@@ -124,11 +122,8 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-4 col-md-offset-2">
+                <div class="col-md-8 col-md-offset-2">
                     <p class="text-muted">I'm a data engineer-turned-scientist. My professional experiences range across data engineering, microservices, search engines, natural language processing, and artificial intelligence. My weapon of choice is Python.</p>
-                </div>
-                <div class="col-md-4">
-                    <p class="text-muted">For my previous startup, I've built a social analytics product with a bespoke NLP engine to analyze the Chinese social media. It would collect the social conversations surround a keyword and determine the prevailing emotions.</p>
                 </div>
             </div>
         </div>
@@ -216,9 +211,26 @@
             <div class="row">
                 <div class="col-lg-12">
                     <ul class="timeline">
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
+                                <h4><br />2018-</h4>
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4><a href="https://www.doximity.com/">Doximity</a></h4>
+                                    <h4 class="subheading">Machine Learning Engineer</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <ul class="text-muted">
+                                        <li>Developed methods to tailor relevant newsfeed contents</li>
+                                        <li>Expanded capabilities of comparative experiments</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </li>
                         <li class="timeline">
                             <div class="timeline-image">
-                                <h4><br />2016-</h4>
+                                <h4><br />2016-2018</h4>
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -393,7 +405,6 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a class="btn btn-lg" href="https://twitter.com/whosbacon" title="Twitter"><i class="fa fa-twitter fa-2x"></i></a>
                     <a class="btn btn-lg" href="https://github.com/whosken/" title="Github"><i class="fa fa-github fa-2x"></i></a>
                     <a class="btn btn-lg" href="https://medium.com/@whosbacon" title="Medium"><i class="fa fa-medium fa-2x"></i></a>
                     <a class="btn btn-lg" href="https://www.instagram.com/baconillustrated/" title="Instagram"><i class="fa fa-instagram fa-2x"></i></a>
