--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4><a href="https://www.doximity.com/">Doximity</a></h4>
+                                    <h4><a href="https://www.doximity.com/" target="_blank">Doximity</a></h4>
                                     <h4 class="subheading">Machine Learning Engineer</h4>
                                 </div>
                                 <div class="timeline-body">
