Split Signal experience from other contract projects

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <ul class="timeline">
-                        <li class="timeline-inverted">
+                        <li class="timeline">
                             <div class="timeline-image">
                                 <h4><br />2018-</h4>
                             </div>
@@ -228,6 +228,24 @@
                                 </div>
                             </div>
                         </li>
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
+                                <h4><br />2017-2018</h4>
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4><a href="https://angel.co/signal-9" target="_blank">Parallel Labs</a></h4>
+                                    <h4 class="subheading">VP of Engineering</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <ul class="text-muted">
+                                        <li>Lead team of four data scientists and engineers</li>
+                                        <li>Designed and developed data pipeline to process news articles in real time</li>
+                                        <li>Designed deep learning models through Keras on Tensorflow, Scikit-learn, and SpaCy</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </li>
                         <li class="timeline">
                             <div class="timeline-image">
                                 <h4><br />2016-2018</h4>
@@ -239,9 +257,6 @@
                                 </div>
                                 <div class="timeline-body">
                                     <ul class="text-muted">
-                                        <li>Lead team of four data scientists and engineers</li>
-                                        <li>Designed and developed data pipeline to process news articles in real time</li>
-                                        <li>Designed deep learning models through Keras on Tensorflow, Scikit-learn, and SpaCy</li>
                                         <li>Created analytics dashboard for platform user activities with Django, Elasticsearch, and D3.js</li>
                                         <li>Developed microservice with predictive data model using Flask and Scikit-learn</li>
                                         <li>Developed backend RESTful API for dating application with scalable matching algorithm using Python and MongoDB</li>
